--- a/src/templates/itemCount.template.html
+++ b/src/templates/itemCount.template.html
@@ -1,4 +1,4 @@
+<div>{{itemCtrl.name}}</div>
 <button ng-click="itemCtrl.updateSum()">חשב</button>
 <span ng-if="itemCtrl.sum!=0">{{itemCtrl.sum}}</span>
 <input type="text" ng-model="itemCtrl.input">
-<span>{{itemCtrl.name}}</span>
